    + work around groff mapping of ASCII quotes using macros (requested by
      Reuben Thomas based on Colin Watson advice (closes: #378700)
  * Switch debian/rules to xsfbs instead of copying half of (an outdated
    version of) it (closes: #538594).  Incidentally, this provides
    README.source, and allows us to bump Standards-Version to 3.8.2.

 -- Julien Cristau <jcristau@debian.org>  Mon, 10 Aug 2009 10:55:18 +0200

xterm (243-1) unstable; urgency=low

  * New upstream release (closes: #526334)
    + fixes bell regression (closes: #520405)
  * Refresh patch stack.
  * Defaults for allow-{tcap,window,font}ops are now set from debian/rules
    instead of the relevant patches, which now only touch the manpage.
  * Update copy of XTerm FAQ to revision 1.105 (dated 2009/01/11).

 -- Julien Cristau <jcristau@debian.org>  Mon, 25 May 2009 19:58:19 +0200

xterm (242-1) unstable; urgency=low

  * New upstream release.

 -- Julien Cristau <jcristau@debian.org>  Wed, 18 Mar 2009 15:37:18 +0100

xterm (241-1) unstable; urgency=low

  * New upstream release.
  * Drop patch 905_tcapops.diff, allowTcapOps now defaults to false upstream.
  * Refresh patches 901_xterm_manpage.diff, 902_pointermode_never.diff,
    903_windowops.diff, 904_fontops.diff.

 -- Julien Cristau <jcristau@debian.org>  Sun, 01 Feb 2009 00:15:50 +0100

xterm (239-1) unstable; urgency=low

  * New upstream release.
    + correct a cast in input.c, which broke translation of numeric keypad
      codes to pageup, pagedown, etc., on 64-bit platform (closes: #511138).
  * debian/copyright: Update Thomas Dickey's copyright notices

 -- Julien Cristau <jcristau@debian.org>  Sat, 10 Jan 2009 19:22:31 +0100

xterm (238-2) unstable; urgency=low

  * Also default allowTcapOps to false, as suggested by Florian Weimer.

 -- Julien Cristau <jcristau@debian.org>  Sun, 04 Jan 2009 14:57:43 +0100

xterm (238-1) unstable; urgency=low

  * New upstream release.
    + respond to incorrectly formatted DECRQSS with a cancel