@@ -10,6 +10,7 @@ xterm (244-1) UNRELEASED; urgency=low
   * Switch debian/rules to xsfbs instead of copying half of (an outdated
     version of) it (closes: #538594).  Incidentally, this provides
     README.source, and allows us to bump Standards-Version to 3.8.2.
+  * Remove preinst dealing with upgrades from pre-etch versions.
 
  -- Julien Cristau <jcristau@debian.org>  Mon, 10 Aug 2009 10:55:18 +0200
 
